# dedic.eu

./: .dockerignore  .eslintrc.json  .gitignore  .htaccess  eslint.config.js  htaccess-template.txt  package-lock.json  package.json  playwright.config.js  rollup-plugin-htaccess.config.ts  svelte-sitemap.config.ts  svelte.config.js  tsconfig.json  vite.config.js  webpack.config.js
.github/workflows/: CI.yml  deploy.yml
src/: app.d.ts  app.html  index.html  index.ts
src/lib/: loadPublications.ts  stores.ts  theme.module.scss  theme.scss  theme.svelte.ts  toc.svelte.ts
src/routes/: +layout.svelte  +page.server.ts  +page.svelte  +page.ts
src/static/: .htaccess
static/: .htaccess  publications.json  robots.txt  site.webmanifest  teaching.json
static/teaching/B251-TZN-materials/: TZN-01-solutions.ipynb  TZN-01.ipynb  TZN-02-solutions.ipynb  TZN-02.ipynb  TZN-03.ipynb  TZN-04.ipynb  TZN-05.ipynb  pyproject.toml
static/teaching/B251-TZN-materials/TZN-04-presentation/: TZN-04-presentation.tex  zotero.bib
static/teaching/B252-NSN-materials/: .gitignore  NSN-01-solutions.ipynb  NSN-01.ipynb  NSN-02-solutions.ipynb  NSN-02.ipynb  NSN-03-solutions.ipynb  NSN-03.ipynb  NSN-04-solutions.ipynb  NSN-04.ipynb  NSN-05-solutions.ipynb  NSN-05.ipynb  pyproject.toml
tests/: darkMode.spec.ts  navigation.spec.ts  no-js.spec.ts  pages.spec.ts  screenshot.spec.ts  snapshot.spec.ts  test-fixture.ts
tests/hars/: LAL1-google-sheet.har
tests/snapshot.spec.ts-snapshots/: main-page-snapshot-1-chromium-linux.txt  main-page-snapshot-1-firefox-linux.txt  navigation-1-firefox-linux.txt  (+31 more)
(+84 files in other folders)
