[project]
name = "tzn"
version = "2025.1.0"
description = "Theoretical Fundamentals of Neural Networks"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "scikit-learn>=1.7.2",
    "torch>=2.8.0",
    "torch-cluster>=1.6.3",
    "torch-geometric>=2.6.1",
    "torchvision>=0.23.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
]
