[project]
name = "nsn"
version = "2026.1.0"
description = "Neural Networks, Machine Learning, and Randomness"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "scikit-learn>=1.8.0",
    "torch>=2.10.0",
    "torch-cluster>=1.6.3",
    "torch-geometric>=2.7.0",
    "torchvision>=0.25.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]
